# tbe_sqrt

./: CMakeLists.txt  README.md
cmake/: config.cmake
cmake/util/: gen_ops_filter.sh  parse_ini_to_json.py
cmake/util/makeself/: make-release.sh  makeself-header.sh
framework/: CMakeLists.txt
framework/tf_plugin/: CMakeLists.txt  tensorflow_sqrt_plugin.cpp
op_proto/: CMakeLists.txt  sqrt.cpp  sqrt.h
tbe/: CMakeLists.txt
tbe/impl/: sqrt.py
tbe/op_info_cfg/ai_core/ascend910/: sqrt.ini
tbe/testcases/acl_op/inc/: op_runner.h
tbe/testcases/acl_op/src/: CMakeLists.txt  common.cpp  main.cpp  op_runner.cpp
tbe/testcases/st/: CMakeLists.txt
tbe/testcases/st/sqrt/: CMakeLists.txt  sqrt_datagen.py  sqrt_st.cc  test_sqrt_st.py
tbe/testcases/tf_test/sqrt/: tf_sqrt.py
tbe/testcases/ut/sqrt/: test_sqrt.py
